add create order support

--- a/app/views/designDetail.html
+++ b/app/views/designDetail.html
@@ -17,3 +17,8 @@
         Description: {{designInfo.access}}
     </div>
 </div>
+<div class="row">
+    <div class="col-xs-3">
+        <button type="button" class="btn btn-primary" ng-click="onOrderBtnClicked(designInfo.designId)">Purchase</button>
+    </div>
+</div>
