--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -48,6 +48,16 @@
                         </ul>
                     </div>
                 </div>
+                <div class='col-xs-6'>
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <span>CreatorId: </span>
+                        </div>
+                        <div class="col-xs-8">
+                            <input type="text" class="form-control" ng-model="designInfo.sCreatorId">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class='row'>
                 <div class="col-xs-4">
