--- a/app/views/createOrder.html
+++ b/app/views/createOrder.html
@@ -33,6 +33,14 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-xs-4">
+                <span>CreatorId: </span>
+            </div>
+            <div class="col-xs-8">
+                <input type="text" class="form-control" ng-model="orderInfo.sCreatorId">
+            </div>
+        </div>
+        <div class="row">
             <div class="col-xs-8"></div>
             <div class="col-xs-4">
                 <button type="button" class="btn btn-primary" ng-click="onConfirmBtnClicked()">OK</button>
