--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -11,6 +11,17 @@
                 </slide>
             </carousel-->
             <div>
+                <div class='row myDesignListTitleRow'>
+                    <div class="col-xs-3">Thumbnail</div>
+                    <div class="col-xs-9">
+                        <div class='row'>
+                            <div class="col-xs-3">Description</div>
+                            <div class="col-xs-2">creatorId</div>
+                            <div class="col-xs-2">price</div>
+                            <div class="col-xs-2">access</div>
+                        </div>
+                    </div>
+                </div>
                 <div ng-repeat="oDesign in aMyDesigns">
                     <div class='row'>
                         <div class="col-xs-3">
@@ -19,7 +30,7 @@
                         <div class="col-xs-9">
                             <div class='row'>
                                 <div class="col-xs-3">{{oDesign.desc}}</div>
-                                <div class="col-xs-2">{{oDesign.size}}</div>
+                                <div class="col-xs-2">{{oDesign.creatorId}}</div>
                                 <div class="col-xs-2">{{oDesign.price}}</div>
                                 <div class="col-xs-2">{{oDesign.access}}</div>
                                 <div class="col-xs-2">
@@ -44,7 +55,7 @@
 </div>
 <div class="row">
     <div class="col-xs-4">
-        <a ui-sref="myDesigns">我的设计</a>
+        <a ui-sref="orderList">查询订单</a>
     </div>
     <div class="col-xs-4"></div>
     <div class="col-xs-4">
