fix populate bug and UI string modification

--- a/app/views/orderList.html
+++ b/app/views/orderList.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-xs-4">
-        <span>代付款</span>
+        <span>ppp1</span>
     </div>
     <div class="col-xs-4">
-        <span>已发货</span>
+        <span>ppp2</span>
     </div>
     <div class="col-xs-4">
-        <span>已完成</span>
+        <span>ppp3</span>
     </div>
 </div>
 <div class="row" ng-controller="OrderListCtrl">
@@ -16,7 +16,7 @@
             <div class="col-xs-9">
                 <div class='row'>
                     <div class="col-xs-3">设计名称</div>
-                    <div class="col-xs-3">价格</div>
+                    <div class="col-xs-3">长度</div>
                     <div class="col-xs-3">时间</div>
                     <div class="col-xs-3">状态</div>
                 </div>
