--- a/app/views/designDetail.html
+++ b/app/views/designDetail.html
@@ -19,6 +19,6 @@
 </div>
 <div class="row">
     <div class="col-xs-3">
-        <button type="button" class="btn btn-primary" ng-click="onOrderBtnClicked(designInfo.designId)">Purchase</button>
+        <button type="button" class="btn btn-primary" ng-click="onOrderBtnClicked(designInfo.designId)">detail</button>
     </div>
 </div>
