--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -17,7 +17,7 @@
                         <div class='row'>
                             <div class="col-xs-3">Description</div>
                             <div class="col-xs-2">creatorId</div>
-                            <div class="col-xs-2">price</div>
+                            <div class="col-xs-2">ppp</div>
                             <div class="col-xs-2">access</div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
 </div>
 <div class="row">
     <div class="col-xs-4">
-        <a ui-sref="orderList">查询订单</a>
+        <a ui-sref="orderList">Search</a>
     </div>
     <div class="col-xs-4"></div>
     <div class="col-xs-4">
