--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -1,7 +1,7 @@
 <div class='row createDesignView' ng-controller="CreateDesignCtrl">
     <div class='row'>
         <div class="col-xs-12">
-            <img class='createDesignBgImg' src='img/create_bk.png'></img>
+            <img class='createDesignBgImg' src='img/test.svg'></img>
         </div>
     </div>
     <div class='row'>
