--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -1,16 +1,16 @@
 <div class='row'>
     <div class="col-xs-12">
         <div ng-controller="MyDesignsListCtrl">
-            <!--carousel interval="myInterval">
+            <carousel interval="myInterval">
                 <slide ng-repeat="oDesign in aMyDesigns" active="oDesign.active">
-                    <img ng-src="http://placekitten.com/604/300" style="margin:auto;">
+                    <img ng-src="img/test.svg" style="margin:auto;">
                     <div class="carousel-caption">
                         <h4>Slide {{$index}}</h4>
-                        <p>{{oDesign.modified}}</p>
+                        <p>{{oDesign.desc}}</p>
                     </div>
                 </slide>
-            </carousel-->
-            <div>
+            </carousel>
+            <!--div>
                 <div class='row myDesignListTitleRow'>
                     <div class="col-xs-3">Thumbnail</div>
                     <div class="col-xs-9">
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div-->
         </div>
     </div>
 </div>
