--- a/app/views/myInfo.html
+++ b/app/views/myInfo.html
@@ -18,6 +18,35 @@
                     <div class="row">Weaves Fun Wins!!!</div>
                 </div>
             </div>
+            <div class="row userStatisticsRow">
+                <div class="col-xs-3">我的收获</div>
+                <div class="col-xs-9">
+                    <div class="row userStatisticsSubRow">
+                        <div class="col-xs-4 userStatisticsSubRowTitle">我的粉丝</div>
+                        <div class="col-xs-8 userStatisticsSubRowValue">224</div>
+                    </div>
+                    <div class="row userStatisticsSubRow">
+                        <div class="col-xs-4 userStatisticsSubRowTitle">我的销售</div>
+                        <div class="col-xs-8 userStatisticsSubRowValue">12</div>
+                    </div>
+                    <div class="row userStatisticsSubRow">
+                        <div class="col-xs-4 userStatisticsSubRowTitle">我被收藏</div>
+                        <div class="col-xs-8 userStatisticsSubRowValue">518</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row userQRCodeRow">
+                <div class="col-xs-12">
+                    <div class="row userQRCodeTitle">我的二维码</div>
+                    <div class="row userQRCodeValue">
+                        <img class="qrcodeImg" src="img/qrcode.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="row userAddressRow">
+                <div class="col-xs-3 userAddressRowTitle">我的地址</div>
+                <div class="col-xs-9 userAddressRowValue">上海市浦东新区金科路123号</div>
+            </div>
         </div>
     </div>
 </div>
