--- a/app/app.css
+++ b/app/app.css
@@ -2,6 +2,7 @@
 .container-fluid {
   padding-left: 0px;
   padding-right: 0px;
+  height: 0px;
 }
 .menu {
   list-style: none;
@@ -40,27 +41,43 @@
   background-repeat: no-repeat;
 }*/
 
-.createDesignView.row {
+.createDesignView.row,
+.createDetailView.row {
   width: 100%;
   margin-right: 0px;
   margin-left: 0px;
 }
-.createDesignBgImg {
-  position: absolute;
+
+.createDesignView > div:first-child > div:first-child,
+.createDetailView > div:first-child > div:first-child {
+  position: fixed;
   top: 0px;
   left: 0px;
   z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+.createDesignBgImg {
   width: 100%;
 }
 .createDesignView>img {
   
 }
 
-.rightBtn{
+.createDesignView .genderButtonRow {
+  margin-top: 40%;
+}
+
+.createDesignView .genderButtonRow > div:first-child {
+  text-align: right;
+}
+
+.createDetailView .rightBtn{
   float: right;
 }
 
-.newDesignInfoArea {
+.createDetailView .newDesignInfoArea {
   position: fixed;
   bottom: 50px;
   width: 100%;
@@ -160,7 +177,7 @@
 }
 
 .userInfoDerive .userQRCodeRow .userQRCodeValue > img {
-  height: 100%;
+  height: 90%;
 }
 
 .userInfoDerive .userAddressRow .userAddressRowValue {
