--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -8,7 +8,7 @@
         <div class='row'>
             <div class="col-xs-12">
                 <div class="col-xs-3">
-                    <button type="button" class="btn btn-default glyphicon glyphicon-refresh"></button>
+                    <button type="button" class="btn btn-default glyphicon glyphicon-refresh" ng-click="onCreateDesignBackClicked()"></button>
                 </div>
                 <div class="col-xs-2">
                     <button type="button" class="btn btn-default">白</button>
