--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -57,7 +57,7 @@
     <div class="col-xs-4">
         <a ui-sref="orderList">Search</a>
     </div>
-    <div class="col-xs-4">{{code}}</div>
+    <div class="col-xs-4"></div>
     <div class="col-xs-4">
         <a ui-sref="createDesign">新设计</a>
     </div>
