--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -10,6 +10,7 @@
                     </div>
                 </slide>
             </carousel>
+            <div>temp code: {{code}}</div>
             <!--div>
                 <div class='row myDesignListTitleRow'>
                     <div class="col-xs-3">Thumbnail</div>
@@ -57,7 +58,7 @@
     <div class="col-xs-4">
         <a ui-sref="orderList">Search</a>
     </div>
-    <div class="col-xs-4">{{code}}</div>
+    <div class="col-xs-4"></div>
     <div class="col-xs-4">
         <a ui-sref="createDesign">新设计</a>
     </div>
