--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -14,7 +14,7 @@
                     <button type="button" class="btn btn-default">白</button>
                 </div>
                 <div class="col-xs-2">
-                    <button type="button" class="btn btn-default">转</button>
+                    <button type="button" class="btn btn-default" ng-click="chooseImageFromGallery()">转</button>
                 </div>
                 <div class="col-xs-2">
                     <button type="button" class="btn btn-default">黑</button>
