--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -2,7 +2,7 @@
     <div ui-view="saveDetail">
         <div class='row'>
             <div class="col-xs-12">
-                <img class='createDesignBgImg' src='img/test.svg'></img>
+                <img class='createDesignBgImg' src='img/female_white.png'></img>
             </div>
         </div>
         <div class='row'>
