support imageMagick to get thumbnail

--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -29,7 +29,8 @@
             <button class="btn btn-default" ng-file-select ng-file-change="uploadImage($files)">Upload on file change</button>
         </div>
         <div class="row">
-        	<img src="{{imgSrc}}">
+        	<img src="{{midImgSrc}}">
+            <img src="{{largeImgSrc}}">
         </div>
         <div class='row newDesignInfoArea'>
             <div class="col-xs-12">
