--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -8,14 +8,14 @@
 
         <div ui-view="personalGallery"></div>
         
-        <div class="row">
+        <!--div class="row">
             <input type="file" ng-file-select ng-model="files" ng-file-change="fileSelected($files)" ng-multiple="false" ng-capture="camera" accept="image/*" ng-model-rejected="rejFiles">Upload using model $watch</input>
             <button class="btn btn-default" ng-file-select ng-file-change="uploadImage($files)">Upload on file change</button>
         </div>
         <div class="row">
         	<img src="{{midImgSrc}}">
             <img src="{{largeImgSrc}}">
-        </div>
+        </div-->
 
         <div class='row toolRow'>
             <div class="col-xs-12">
