--- a/app/app.css
+++ b/app/app.css
@@ -115,7 +115,10 @@
 }
 
 .createDetailView .personalGalleryRow .uploadedImageArea {
+  height: 80%;
   height: calc(100% - 110px);
+  height: -webkit-calc(100% - 110px);
+  height: -moz-calc(100% - 110px);
 }
 
 .createDetailView .personalGalleryRow .uploadRowArea {
@@ -186,7 +189,10 @@
 }
 
 .uploadedImageArea .myArtifactsCarousel {
+  height: 70%;
   height: calc(100% - 50px);
+  height: -webkit-calc(100% - 50px);
+  height: -moz-calc(100% - 50px);
 }
 
 .uploadedImageArea .myArtifactsCarousel li {
@@ -311,6 +317,8 @@
 
 .userInfoDerive .userQRCodeRow .userQRCodeValue {
   height: calc(100% - 20px);
+  height: -webkit-calc(100% - 20px);
+  height: -moz-calc(100% - 20px);
   text-align: center;
 }
 
