--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -17,6 +17,9 @@
             <img src="{{largeImgSrc}}">
         </div-->
 
+        <div>
+            <span>{{sUserOpenId}}</span>
+        </div>
         <div class='row toolRow'>
             <div class="col-xs-12">
                 <div class="col-xs-2">
