--- a/app/app.css
+++ b/app/app.css
@@ -130,6 +130,14 @@
   margin-top: 30px;
 }
 
+.createDetailView .selectedArtifactArea {
+  position: relative;
+}
+
+.createDetailView .selectedArtifactArea .selectedArtifactItem {
+  position: absolute;
+}
+
 .royalButtonWrapper {
   padding: 10px 15px 10px 15px;
   border-width: 2px;
