--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -7,6 +7,13 @@
         </div>
 
         <div ui-view="personalGallery"></div>
+
+        <div class="selectedArtifactArea">
+            <div ng-repeat="oArtifact in aSelectedArtifact" class="selectedArtifactItem" 
+            style="{{oArtifact.styleValue}}">
+                <img src="data:image/png;base64,{{oArtifact.largeImage64}}">
+            </div>
+        </div>
         
         <!--div class="row">
             <input type="file" ng-file-select ng-model="files" ng-file-change="fileSelected($files)" ng-multiple="false" ng-capture="camera" accept="image/*" ng-model-rejected="rejFiles">Upload using model $watch</input>
@@ -23,7 +30,7 @@
         <div class='row toolRow'>
             <div class="col-xs-12">
                 <div class="col-xs-2">
-                    <button type="button" class="btn btn-default glyphicon glyphicon-refresh" ng-click="onCreateDesignBackClicked()"></button>
+                    <button type="button" class="btn btn-default" ng-click="onCreateDesignBackClicked()">Back</button>
                 </div>
                 <div class="col-xs-2">
                     <button type="button" class="btn btn-default">hot</button>
