--- a/app/app.css
+++ b/app/app.css
@@ -108,6 +108,7 @@
   right: 0px;
   bottom: 80px;
   background-color: rgba(207, 176, 96, 0.5);
+  z-index: 1000;
 }
 
 .createDetailView .personalGalleryRow > div:first-child {
@@ -130,8 +131,19 @@
   margin-top: 30px;
 }
 
+.createDetailView .selectedArtifactArea {
+  position: relative;
+}
+
+.createDetailView .selectedArtifactArea .selectedArtifactItem {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
 .createDetailView .selectedArtifactArea .selectedArtifactItem img {
   width: 70%;
+  position: relative;
 }
 
 .royalButtonWrapper {
