--- a/app/app.css
+++ b/app/app.css
@@ -141,9 +141,22 @@
   left: 0px;
 }
 
+.createDetailView .selectedArtifactArea .selectedArtifactItem .selectedArtifactItemPencil {
+  font-size: 12px;
+  background-color: rgba(211, 144, 22, 0.5);
+  padding: 5px 5px 5px 5px;
+  display: inline;
+  border-radius: 12px;
+  color: white;
+  position: relative;
+}
+
 .createDetailView .selectedArtifactArea .selectedArtifactItem img {
   width: 70%;
   position: relative;
+  border-width: 2px;
+  border-style: dotted;
+  border-color: rgb(211, 144, 22);
 }
 
 .royalButtonWrapper {
