--- a/app/app.css
+++ b/app/app.css
@@ -141,7 +141,8 @@
   left: 0px;
 }
 
-.createDetailView .selectedArtifactArea .selectedArtifactItem .selectedArtifactItemPencil {
+.createDetailView .selectedArtifactArea .selectedArtifactItem .selectedArtifactItemPencil,
+.createDetailView .selectedArtifactArea .selectedArtifactItem .selectedArtifactItemResize {
   font-size: 12px;
   background-color: rgba(211, 144, 22, 0.5);
   padding: 5px 5px 5px 5px;
