--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -25,7 +25,8 @@
                 ng-click="onEditArtifactItemClicked()"></span>
                 <span class="selectedArtifactItemResize glyphicon glyphicon-resize-full" 
                 style="{{oArtifact.resizeStyleStr}}" 
-                hm-drag="onSelectedArtiItemResizeDrag($event, oArtifact)"></span>
+                hm-drag="onSelectedArtiItemResizeDrag($event, oArtifact)" 
+                ></span>
             </div>
         </div>
         <!--img src="data:image/png;base64,{{oArtifact.largeImage64}}" design-artifact-->
