--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -1,5 +1,5 @@
 <div class='row createDetailView' ontouchmove="event.preventDefault()">
-    <div ui-view="saveDetail">
+    <!--div ui-view="saveDetail"-->
         <div class='row'>
             <div class="col-xs-12">
                 <img class='createDesignBgImg' src='img/female_white.png'></img>
@@ -7,8 +7,10 @@
         </div>
 
         <div ui-view="personalGallery"></div>
+        <div ui-view="saveDetail"></div>
 
         <div class="selectedArtifactArea">
+            <div class="availableArea" style="{{htmlItemStyle.availableArea.styleStr}}"></div>
             <div ng-repeat="oArtifact in aSelectedArtifact" class="selectedArtifactItem">
                 
                 <img src="data:image/png;base64,{{oArtifact.largeImage64}}" 
@@ -26,6 +28,11 @@
                 <span class="selectedArtifactItemResize glyphicon glyphicon-resize-full" 
                 style="{{oArtifact.resizeStyleStr}}" 
                 hm-drag="onSelectedArtiItemResizeDrag($event, oArtifact)" 
+                hm-dragend="onSelectedArtiItemResizeDragend($event, oArtifact)" 
+                ></span>
+                <span class="selectedArtifactItemResize glyphicon glyphicon-remove" 
+                style="{{oArtifact.removeStyleStr}}" 
+                ng-click="onRemoveArtifactItemClicked(oArtifact)" 
                 ></span>
             </div>
         </div>
@@ -40,8 +47,8 @@
             <img src="{{largeImgSrc}}">
         </div-->
 
-        <div>
-            <span>{{sUserOpenId}}</span>
+        <div class="previewDesignBtn" ng-click="onPreviewDesignBtnClicked()">
+            <span>好</span>
         </div>
         <div class='row toolRow'>
             <div class="col-xs-12">
@@ -61,7 +68,7 @@
                     <button type="button" class="btn btn-default">QR</button>
                 </div>
                 <div class="col-xs-2">
-                    <button class="btn btn-default rightBtn glyphicon glyphicon-ok" ng-click="createDesign()"></button>
+                    <button class="btn btn-default rightBtn glyphicon glyphicon-ok" ng-click="onCreateDesignClicked()"></button>
                 </div>
             </div>
         </div>
@@ -116,5 +123,5 @@
                 </div>
             </div>
         </div-->
-    </div>
+    <!--/div-->
 </div>
